--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "netlify-cli": "^2.65.7",
+    "polished": "^4.0.3",
+    "prettier": "^2.1.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "styled-components": "^5.2.0",
+    "styled-system": "^5.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
